<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        android:title="@string/settings_category_diagnostics" />

    <Preference
        android:title="@string/pref_unobfuscator"
        android:key="mpro_advanced_unobfuscator"
        android:summary="@string/pref_unobfuscator_summary" />

    <Preference
        android:title="@string/pref_apicodes"
        android:key="mpro_advanced_apicodes"
        android:summary="@string/pref_apicodes_summary" />

    <Preference
        android:title="@string/pref_hookstate"
        android:key="mpro_advanced_hookstate"
        android:summary="@string/pref_hookstate_summary" />

    <PreferenceCategory
        android:title="@string/settings_category_debug" />

    <Preference
        android:key="mpro_debug_warning"
        android:title="@string/settings_debug_warning_title"
        android:summary="@string/settings_debug_warning_summary"
        android:selectable="false"
        android:icon="@android:drawable/ic_dialog_alert" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="mpro_debug_typing_capture"
        android:title="@string/pref_debug_typing_capture"
        android:summary="@string/pref_debug_typing_capture_summary" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="mpro_debug_typing_force_block"
        android:title="@string/pref_debug_typing_force_block"
        android:summary="@string/pref_debug_typing_force_block_summary" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="mpro_debug_presence_capture"
        android:title="@string/pref_debug_presence_capture"
        android:summary="@string/pref_debug_presence_capture_summary" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="mpro_debug_presence_force_block"
        android:title="@string/pref_debug_presence_force_block"
        android:summary="@string/pref_debug_presence_force_block_summary" />

    <EditTextPreference
        android:defaultValue="-1"
        android:key="mpro_debug_presence_action_code"
        android:title="@string/pref_debug_presence_action_code"
        android:summary="@string/pref_debug_presence_action_code_summary"
        android:inputType="numberSigned"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue=""
        android:key="mpro_debug_presence_action_codes"
        android:title="@string/pref_debug_presence_action_codes"
        android:summary="@string/pref_debug_presence_action_codes_summary"
        android:inputType="text"
        app:useSimpleSummaryProvider="true" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="mpro_debug_mailbox_discovery"
        android:title="@string/pref_debug_mailbox_discovery"
        android:summary="@string/pref_debug_mailbox_discovery_summary" />
</PreferenceScreen>
